deploy/budget-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget-service
  template:
    metadata:
      labels:
        app: budget-service
    spec:
      containers:
        - name: budget-service
          image: chywiz/budget-service:latest # Hoặc tag SHA GitHub
