deploy/budget-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-service
spec:
  selector:
    app: budget-service
  ports:
    - port: 80
      targetPort: 3002
