deploy/budget-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: budget.192.168.222.136.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: budget-service
                port:
                  number: 80
